[package]
authors = ["Zeyla Hellyer <zeyla@hellyer.dev>"]
categories = []
description = "CLI for accessing the Active911 'API'."
documentation = "https://github.com/zeylahellyer/active911"
edition = "2018"
homepage = "https://github.com/zeylahellyer/active911"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE.md"]
keywords = []
license = "ISC"
name = "active911-cli"
publish = false
readme = "README.md"
repository = "https://github.com/zeylahellyer/active911.git"
version = "0.1.0"

[dependencies]
active911 = { default-features = false, features = ["http", "rustls-native-certs"], path = "../lib" }
tokio = { default-features = false, features = ["rt"], version = "1" }
